[gd_scene load_steps=2 format=3 uid="uid://cmainmenu12345"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.14, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -220.0
offset_right = 150.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Chess Puzzles"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "Mate-in-N Training"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ModeButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="PracticeButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "Practice"

[node name="SprintButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "Sprint"

[node name="StreakButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "Streak"

[node name="DailyButton" type="Button" parent="VBoxContainer/ModeButtons"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
theme_override_font_sizes/font_size = 18
text = "Daily Challenge"

[node name="StatusLabel" type="Label" parent="VBoxContainer/ModeButtons/DailyButton"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -10.0
offset_right = -10.0
offset_bottom = 10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Completed"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="NavButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="StatsButton" type="Button" parent="VBoxContainer/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)
text = "Stats"

[node name="SettingsButton" type="Button" parent="VBoxContainer/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer/NavButtons"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)
text = "Quit"
